--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,6 @@
         android:layout_marginStart="20dp"/>
 
 
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/barr" />
-
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="86dp"
@@ -46,18 +39,28 @@
         android:textColor="@android:color/white"
         android:text="@string/username"
         android:textSize="30sp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="325dp"
         android:layout_marginStart="10dp" />
 
     <EditText
+        android:id="@+id/username_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username_info"
-        android:hint="@string/username"
         android:textColorHint="@android:color/darker_gray"
-        android:layout_marginStart="10dp"
+        android:inputType="textEmailAddress"
+        android:layout_marginStart="35dp"
         android:layout_marginEnd="20dp"
+        android:textColor="#FFFFFF"
         />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        app:srcCompat="@drawable/person"
+        android:layout_marginTop="380dp"
+        android:layout_marginStart="0dp"/>
 
     <TextView
         android:id="@+id/password_info"
@@ -66,18 +69,28 @@
         android:text="@string/password"
         android:textColor="@android:color/white"
         android:textSize="30sp"
-        android:layout_marginTop="300dp"
+        android:layout_below="@id/username_hint"
         android:layout_marginStart="10dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_info"
-        android:hint="@string/password"
         android:textColorHint="@android:color/darker_gray"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="35dp"
+        android:inputType="textPassword"
         android:layout_marginEnd="20dp"
+        android:textColor="#FFFFFF"
         />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        app:srcCompat="@drawable/lock_icon"
+        android:layout_marginTop="470dp"
+        android:layout_marginStart="0dp"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
