--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,15 +10,109 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="391dp"
-        android:layout_height="711dp"
-        app:srcCompat="@drawable/bara_bara_bara" />
+        android:id="@+id/imageView9"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:onClick="click"
+        app:srcCompat="@drawable/arrow" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/create_new_account_b"
+        android:textSize="28sp"
+        android:textColor="@android:color/white"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="8dp" />
+
+    <TextView
+        android:id="@+id/email_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:text="@string/email"
+        android:textSize="30sp"
+        android:layout_marginTop="250dp"
+        android:layout_marginStart="10dp" />
+
+    <EditText
+        android:id="@+id/email_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:layout_below="@id/email_info"
+        android:textColor="#FFFFFF"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="20dp" />
+
+    <TextView
+        android:id="@+id/username_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:text="@string/username"
+        android:textSize="30sp"
+        android:layout_below="@+id/email_hint"
+        android:layout_marginStart="10dp" />
+
+    <EditText
+        android:id="@+id/username_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:layout_below="@id/username_info"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="20dp" />
+
+    <TextView
+        android:id="@+id/password_info2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:text="@string/password"
+        android:textSize="30sp"
+        android:layout_below="@+id/username_hint"
+        android:layout_marginStart="10dp" />
+
+    <EditText
+        android:id="@+id/password_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:layout_below="@id/password_info2"
+        android:inputType="textPassword"
+        android:layout_marginStart="35dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/create_new_account"/>
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="93dp"
-        android:layout_height="76dp"
-        android:onClick="click"
-        app:srcCompat="@drawable/left_arroq" />
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="0dp"
+        app:srcCompat="@drawable/mail_outline"
+        android:layout_marginTop="300dp"
+        />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        app:srcCompat="@drawable/person"
+        android:layout_marginTop="380dp"
+        android:layout_marginStart="0dp"/>
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        app:srcCompat="@drawable/lock_icon"
+        android:layout_marginTop="470dp"
+        android:layout_marginStart="0dp"/>
+
+
 </RelativeLayout>
