--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,13 +37,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:text="@string/username"
+        android:text="@string/email"
         android:textSize="30sp"
         android:layout_marginTop="325dp"
         android:layout_marginStart="10dp" />
 
     <EditText
-        android:id="@+id/username_hint"
+        android:id="@+id/username_hint_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username_info"
@@ -54,14 +54,6 @@
         android:textColor="#FFFFFF"
         />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="49dp"
-        android:layout_height="28dp"
-        app:srcCompat="@drawable/person"
-        android:layout_marginTop="380dp"
-        android:layout_marginStart="0dp"/>
-
     <TextView
         android:id="@+id/password_info"
         android:layout_width="match_parent"
@@ -69,10 +61,11 @@
         android:text="@string/password"
         android:textColor="@android:color/white"
         android:textSize="30sp"
-        android:layout_below="@id/username_hint"
+        android:layout_below="@id/username_hint_login"
         android:layout_marginStart="10dp" />
 
     <EditText
+        android:id="@+id/password_hint_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_info"
@@ -92,19 +85,22 @@
         android:layout_marginStart="0dp"/>
 
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="50dp"
+        android:onClick="click"
         android:text="@string/oturum_ac_b" />
 
-
-
-
-
-
+    <ImageView
+        android:id="@+id/imageView25"
+        android:layout_width="49dp"
+        android:layout_height="28dp"
+        app:srcCompat="@drawable/mail_outline"
+        android:layout_below="@+id/username_info"/>
 
 
 </RelativeLayout>
