--- a/app/src/main/res/layout/main_page_activity.xml
+++ b/app/src/main/res/layout/main_page_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_background"
-    tools:context=".LoginActivity">
+    tools:context=".MainPageActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,30 +16,35 @@
         <ImageView
             android:id="@+id/home_btn"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
+            android:baselineAlignBottom="true"
             app:srcCompat="@drawable/home" />
+
 
         <ImageView
             android:id="@+id/add_btn"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:onClick="btn_notification"
+            android:baselineAlignBottom="true"
+            android:onClick="clickToAddingFromMain"
             app:srcCompat="@drawable/plus" />
 
         <ImageView
             android:id="@+id/profil_btn"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
+            android:baselineAlignBottom="true"
+            android:onClick="clickToProfil"
             app:srcCompat="@drawable/person" />
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="88dp"
+        android:layout_height="123dp"
         app:srcCompat="@drawable/logo" />
 
 
